fix 700px wide player clipping

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -818,7 +818,7 @@ video {
                             width: 447px;
                         }
                         @media screen and (min-width: 700px) {
-                            width: 573px;
+                            width: 566px;
                         }
                         &.maxlength-full {
                             border: 2px solid red;
